// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects Component renders correctly in English 1`] = `
<div>
  <section
    class="py-20 bg-gray-50 dark:bg-gray-900"
    id="projects"
  >
    <div
      class="container mx-auto px-6"
    >
      <h2
        class="md:text-5xl mb-12"
      >
        <span
          class="text-4xl figure-heading"
        >
          PAST PROJECTS
        </span>
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Animated demonstration of Fender Play app interface, showing guitar lessons and interactive features"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/fender-play-2-5ij4cFMYlbyfhxTs370U7yNkmwQ57I.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Fender : Fender Play
            </h3>
            <p
              class="figure-text mb-6"
            >
              Forget 'Mary Had A Little Lamb'. Pick any guitar, and learn how to play your favorite song.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://www.fender.com/play"
              rel="noopener noreferrer"
              target="_blank"
            >
              View Project
            </a>
          </div>
        </div>
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Animated visualization of Slingshot Laboratory's 3D space environment, displaying orbital mechanics and satellite trajectories"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/slingshot-laboratory-a3MSO5bP5mYS6qWby0toQCdgC4xuEE.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Slingshot Aerospace : Slingshot Laboratory
            </h3>
            <p
              class="figure-text mb-6"
            >
              Learn the fundamentals of astrodynamics and experiment.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://www.slingshot.space/solutions/applications#laboratory"
              rel="noopener noreferrer"
              target="_blank"
            >
              View Project
            </a>
          </div>
        </div>
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Animated showcase of Conan Classic website, featuring clips and highlights from Conan O'Brien's shows"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/conan-classic-3-U8w9fl0h7o70wQh7v0Y64ZEnv8cV1s.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Team Coco : Conan Classic
            </h3>
            <p
              class="figure-text mb-6"
            >
              The best clips from over 25 years of cutting-edge television.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://conanclassic.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              View Project
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Projects Component renders correctly in German 1`] = `
<div>
  <section
    class="py-20 bg-gray-50 dark:bg-gray-900"
    id="projects"
  >
    <div
      class="container mx-auto px-6"
    >
      <h2
        class="md:text-5xl mb-12"
      >
        <span
          class="text-4xl figure-heading"
        >
          VERGANGENE PROJEKTE
        </span>
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Animierte Demonstration der Fender Play App-Oberfläche, die Gitarrenunterricht und interaktive Funktionen zeigt"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/fender-play-2-5ij4cFMYlbyfhxTs370U7yNkmwQ57I.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Fender : Fender Play
            </h3>
            <p
              class="figure-text mb-6"
            >
              Vergessen Sie 'Mary Had A Little Lamb'. Wählen Sie eine beliebige Gitarre und lernen Sie, Ihren Lieblingssong zu spielen.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://www.fender.com/play"
              rel="noopener noreferrer"
              target="_blank"
            >
              Projekt ansehen
            </a>
          </div>
        </div>
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Animierte Visualisierung der 3D-Weltraumumgebung von Slingshot Laboratory, die Orbitalmechanik und Satellitenbahnen zeigt"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/slingshot-laboratory-a3MSO5bP5mYS6qWby0toQCdgC4xuEE.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Slingshot Aerospace : Slingshot Laboratory
            </h3>
            <p
              class="figure-text mb-6"
            >
              Lernen Sie die Grundlagen der Astrodynamik und experimentieren Sie.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://www.slingshot.space/solutions/applications#laboratory"
              rel="noopener noreferrer"
              target="_blank"
            >
              Projekt ansehen
            </a>
          </div>
        </div>
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Animierte Präsentation der Conan Classic Website mit Clips und Highlights aus Conan O'Briens Shows"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/conan-classic-3-U8w9fl0h7o70wQh7v0Y64ZEnv8cV1s.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Team Coco : Conan Classic
            </h3>
            <p
              class="figure-text mb-6"
            >
              Die besten Clips aus über 25 Jahren bahnbrechendem Fernsehen.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://conanclassic.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Projekt ansehen
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Projects Component renders correctly in Spanish 1`] = `
<div>
  <section
    class="py-20 bg-gray-50 dark:bg-gray-900"
    id="projects"
  >
    <div
      class="container mx-auto px-6"
    >
      <h2
        class="md:text-5xl mb-12"
      >
        <span
          class="text-4xl figure-heading"
        >
          PROYECTOS ANTERIORES
        </span>
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Demostración animada de la interfaz de la aplicación Fender Play, mostrando lecciones de guitarra y características interactivas"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/fender-play-2-5ij4cFMYlbyfhxTs370U7yNkmwQ57I.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Fender : Fender Play
            </h3>
            <p
              class="figure-text mb-6"
            >
              Olvídate de 'Mary Had A Little Lamb'. Elige cualquier guitarra y aprende a tocar tu canción favorita.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://www.fender.com/play"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ver Proyecto
            </a>
          </div>
        </div>
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Visualización animada del entorno espacial 3D de Slingshot Laboratory, mostrando mecánica orbital y trayectorias de satélites"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/slingshot-laboratory-a3MSO5bP5mYS6qWby0toQCdgC4xuEE.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Slingshot Aerospace : Slingshot Laboratory
            </h3>
            <p
              class="figure-text mb-6"
            >
              Aprende los fundamentos de la astrodinámica y experimenta.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://www.slingshot.space/solutions/applications#laboratory"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ver Proyecto
            </a>
          </div>
        </div>
        <div
          animate="[object Object]"
          class="professional-card rounded-xl overflow-hidden group"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="relative h-48 overflow-hidden"
          >
            <img
              alt="Presentación animada del sitio web Conan Classic, con clips y momentos destacados de los programas de Conan O'Brien"
              class="object-cover group-hover:scale-105 transition-transform duration-300"
              src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/conan-classic-3-U8w9fl0h7o70wQh7v0Y64ZEnv8cV1s.gif"
            />
          </div>
          <div
            class="p-6"
          >
            <h3
              class="text-xl font-semibold mb-3 figure-subheading"
            >
              Team Coco : Conan Classic
            </h3>
            <p
              class="figure-text mb-6"
            >
              Los mejores clips de más de 25 años de televisión innovadora.
            </p>
            <a
              class="figure-button inline-block text-center"
              href="https://conanclassic.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ver Proyecto
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
